# speech-recognition

./: CMakeLists.txt  README.md
include/: ears.h
scripts/: speech2text.sh  stt.txt  text2speech.sh
src/: .alsa-test.cpp.swp  alsa-test.cpp  ears.cc  ears.cpp  hello-world_sphinx.c  hello_ps  test-text2speech.cc  test-text2speech.cpp  testContinuous.c  testEars.cc
